--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.5.1",
+    "koa-body": "^4.0.1",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.3",
     "mysql": "^2.15.0",
